<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.awidesky</groupId>
	<artifactId>YoutubeClipboardAutoDownloader</artifactId>
	<inceptionYear>2020</inceptionYear>
	<organization>
		<name>awidesky</name>
		<url>https://github.com/awidesky</url>
	</organization>
	<version>2.0.0</version>
	<name>YoutubeClipboardAutoDownloader</name>
	<description>Downloads audio/video from Youtube by automaticly get link from your clipboard.</description>
	<url>https://github.com/awidesky/YoutubeClipboardAutoDownloader</url>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Eugene Hong</name>
			<email>awidesky@naver.com</email>
		</developer>
	</developers>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<build.dir>${project.build.directory}/builds</build.dir>
		<jre_modules>java.base,java.desktop,jdk.crypto.ec</jre_modules>
		
		<maven.build.timestamp.format>yyMMdd.HHmm</maven.build.timestamp.format>
	</properties>
  
	<dependencies>
		<dependency>
			<groupId>io.github.awidesky</groupId>
			<artifactId>GUIUtil</artifactId>
			<version>1.2.1</version>
		</dependency>
		<dependency>
			<groupId>io.github.awidesky</groupId>
			<artifactId>ProjectPath</artifactId>
			<version>1.1.0</version>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>platform-windows</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.panteleyev</groupId>
						<artifactId>jpackage-maven-plugin</artifactId>
						<version>1.6.5</version>
						<configuration>
							<type>MSI</type>
							<icon>${project.basedir}/icon.ico</icon>
							<winMenu>true</winMenu>
							<winShortcut>true</winShortcut>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>platform-macOS</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.panteleyev</groupId>
						<artifactId>jpackage-maven-plugin</artifactId>
						<version>1.6.5</version>
						<configuration>
							<type>PKG</type>
							<icon>${project.basedir}/icon.icns</icon>
							<macPackageIdentifier>io.github.awidesky.YoutubeClipboardAutoDownloader</macPackageIdentifier>
							<macPackageName>Clipboard-dl</macPackageName>
							<!-- <macSign>true</macSign> -->
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>platform-linux</id>
			<activation>
				<os>
					<family>linux</family>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.panteleyev</groupId>
						<artifactId>jpackage-maven-plugin</artifactId>
						<version>1.6.5</version>
						<configuration>
							<icon>${project.basedir}/icon.png</icon>
							<linuxRpmLicenseType>MIT</linuxRpmLicenseType>
							<linuxAppRelease>${maven.build.timestamp}</linuxAppRelease>
							<linuxShortcut>true</linuxShortcut>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>jlink-if-not-exist</id>
			<activation>
				<file>
					<missing>${basedir}/jre/release</missing>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<phase>prepare-package</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>jlink</executable>
									<workingDirectory>${project.basedir}</workingDirectory>
									<arguments>
										<argument>--output</argument>
										<argument>jre</argument>
										<argument>--compress=2</argument>
										<argument>--strip-debug</argument>
										<argument>--no-header-files</argument>
										<argument>--no-man-pages</argument>
										<argument>--add-modules</argument>
										<argument>${jre_modules}</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<outputDirectory>${build.dir}/Clipboard-dl_${project.version}</outputDirectory>
					<archive>
						<manifest>
							<mainClass>io.github.awidesky.YoutubeClipboardAutoDownloader.Main</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<appendAssemblyId>false</appendAssemblyId>
					<finalName>Clipboard-dl_${project.version}</finalName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.panteleyev</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<version>1.6.5</version>

				<configuration>
					<input>${build.dir}/Clipboard-dl_${project.version}</input>
					<destination>${build.dir}/jpackage</destination>
					<mainJar>Clipboard-dl_${project.version}.jar</mainJar>
					<mainClass>io.github.awidesky.YoutubeClipboardAutoDownloader.Main</mainClass>
					<name>Clipboard-dl</name>
					<vendor>Eugene Hong</vendor>
					<appVersion>${project.version}</appVersion>
					<licenseFile>${project.basedir}/LICENSE</licenseFile>
					<copyright>Copyright (c) 2020-2023 Eugene Hong. All Rights Reserved.</copyright>
					<aboutUrl>https://github.com/awidesky/YoutubeClipboardAutoDownloader</aboutUrl>
					<addModules>${jre_modules}</addModules>
				</configuration>

				<executions>
					<execution>
						<id>jpackage-with-no-resource</id>
						<phase>package</phase>
						<goals>
							<goal>jpackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>copy-resources-for-jar</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${build.dir}/Clipboard-dl_${project.version}/</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}</directory>
									<includes>
										<include>icon.png</include>
										<include>LICENSE</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources-for-launch4j</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${build.dir}/launch4j</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}</directory>
									<includes>
										<include>icon.png</include>
										<include>LICENSE</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-jre</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${build.dir}/launch4j/jre</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/jre</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>2.4.1</version>
				<executions>
					<execution>
						<id>launch4j-clui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<jar>${build.dir}/Clipboard-dl_${project.version}/Clipboard-dl_${project.version}.jar</jar>
							<outfile>${build.dir}/launch4j/Clipboard-dl_${project.version}.exe</outfile>
							<dontWrapJar>false</dontWrapJar>
							<headerType>gui</headerType>
							<errTitle></errTitle>
							<cmdLine></cmdLine>
							<chdir></chdir>
							<priority>normal</priority>
							<downloadUrl>https://adoptium.net/</downloadUrl>
							<supportUrl></supportUrl>
							<stayAlive>false</stayAlive>
							<restartOnCrash>false</restartOnCrash>
							<manifest></manifest>
							<icon>${project.basedir}\icon.ico</icon>
							<classPath>
								<mainClass>io.github.awidesky.YoutubeClipboardAutoDownloader.Main</mainClass>
							</classPath>
							<jre>
								<path>jre</path>
								<requires64Bit>true</requires64Bit>
								<minVersion>1.17.0</minVersion>
								<maxVersion></maxVersion>
								<requiresJdk>false</requiresJdk>
								<requires64Bit>false</requires64Bit>
							</jre>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>